Add loading dialog, style

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,6 @@
 @import url(./header-footer.css);
 @import url(./inputs.css);
+@import url(./dialog.css);
 
 /* ---------------     Reboot     --------------- */
 
@@ -42,6 +43,10 @@ main {
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-evenly;
+}
+
+.location {
+	text-align: center;
 }
 
 .city {
