Style footer, improve loader dialog

--- a/src/styles/header-footer.css
+++ b/src/styles/header-footer.css
@@ -4,8 +4,26 @@ header {
 }
 
 footer {
-	padding: 10px;
-	text-align: center;
+	height: 60px;
+
+	display: flex;
+	gap: 8px;
+	justify-content: center;
+	align-items: center;
+
+	background-color: rgb(69, 77, 84);
+	color: white;
+	font-size: 20px;
+}
+
+.fa.fa-github {
+	color: currentColor;
+	font-size: 30px;
+
+	&:hover {
+		transition: transform 0.4s ease-in-out;
+		transform: rotate(-360deg) scale(1.3);
+	}
 }
 
 @media (min-width: 700px) {
